snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.141111-2.module.sha512
3877c43be23525aa6bd23622b205c27ef4668594812344f11826e307f35b25d037df782a08be3a681e98dda6a1102c436ece57e7fbc3cf7ec95f1967807ad775